# azure-c-shared-utility

./: CMakeLists.txt  README.md
adapters/: socket_java.c  socket_java.h  socketio_java.c
configs/: azure_c_shared_utilityFunctions.cmake
java/: CMakeLists.txt
java/dummy_main/: CMakeLists.txt  dummy_main.c
java/toolchain/: cmake-mips-crosscompile-toolchain.cmake
tests/: CMakeLists.txt
